--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "spatie/image-optimizer": "^1.6",
         "spatie/laravel-permission": "^5.4"
     },
     "require-dev": {
