update:  enviroment variables in env.example

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+CODECOV_TOKEN='27f3584f-f86c-402d-b7cb-7753a66f65e9'
+
+CURRENCY=''
+
+BASEURL=''
+LOGIN=''
+TRANKEY=''
